<resources>
    <string name="app_name">LumaLight</string>
    <string name="activate">ACTIVATE</string>
    <string name="stop">STOP</string>
    <string name="active_hint">Tap anywhere or press volume up/down to stop</string>
    <!-- Modes -->
    <string name="mode_solid">SOLID</string>
    <string name="mode_strobe">STROBE</string>
    <!-- Labels -->
    <string name="strobe_speed">Strobe Speed</string>
    <string name="hue_picker">Hue Picker</string>
    <string name="toggle_led_torch">Sync Camera LED</string>
    <string name="color_1">Color 1</string>
    <string name="color_2">Color 2</string>
    <!-- Widgets -->
    <string name="widget_flashlight_label">LumaLight Flashlight</string>
    <string name="widget_strobe_label">LumaLight Strobe</string>
</resources>
